--- a/client/src/styles/Homepage.css
+++ b/client/src/styles/Homepage.css
@@ -116,6 +116,6 @@ nav {
 	font-size: 2.5rem;
 	font-weight: bold;
 	margin-bottom: 50px;
-	color: #ff8c00; /* orange color, can be adjusted as needed */
+	color: #0a0a0a; /* orange color, can be adjusted as needed */
 	font-family: 'Poppins', sans-serif; /* or any other font that you prefer */
   }
