--- a/client/src/styles/Post.css
+++ b/client/src/styles/Post.css
@@ -23,9 +23,9 @@
 }
   
   .post-title {
-    font-size: 24px;
+    font-size: 350%;
     font-weight: bold;
-    margin-bottom: 10px;
+    margin-left: 400px;
   }
   
   .post-description {
