navigation bar added

--- a/client/src/styles/Homepage.css
+++ b/client/src/styles/Homepage.css
@@ -119,3 +119,5 @@ nav {
 	color: #0a0a0a; /* orange color, can be adjusted as needed */
 	font-family: 'Poppins', sans-serif; /* or any other font that you prefer */
   }
+  /* new changes */
+  
