Show preview of description in recipe card

--- a/client/src/styles/Post.css
+++ b/client/src/styles/Post.css
@@ -375,6 +375,7 @@ textarea {
   line-height: 1.4em;
   padding: 5px 8px;
   transition: background-color 0.2s ease 0s;
+  white-space: pre-wrap;
 }
 
 
