--- a/client/src/styles/Homepage.css
+++ b/client/src/styles/Homepage.css
@@ -10,9 +10,20 @@ nav {
 	justify-content: space-between;
 	align-items: center;
 	background-color: #9707b0;
-	padding: 20px;
+	padding: 20px ;
   }
   
+.card-link{
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.TempHeader{
+	font-size: 50px;
+	font-weight: bold;
+}
+
   nav .logo a {
 	font-size: 1.5rem;
 	text-decoration: none;
@@ -25,7 +36,7 @@ nav {
   }
   
   nav .nav-links li {
-	margin: 0 10px;
+	margin: 0 10px ;
   }
   
   nav .nav-links li a {
@@ -39,16 +50,23 @@ nav {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	padding: 20px;
+	padding: 20px ;
 	background-color: #fff;
 	box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.1);
   }
   
+.homepage-header{
+	position: fixed;
+	width: 100%;
+	z-index: 1;
+}
+
   .logo a {
 	font-size: 2rem;
 	font-weight: bold;
 	color: #333;
 	text-decoration: none;
+	margin-left: 20px ;
   }
   
   .nav-links {
@@ -56,6 +74,7 @@ nav {
 	display: flex;
 	align-items: center;
 	gap: 20px;
+	margin-right: 20px ;
   }
   
   .nav-links li a {
@@ -70,14 +89,16 @@ nav {
   }
   
   .recent-posts {
-	padding: 50px;
+	padding: 80px 50px 50px 50px ;
 	text-align: center;
   }
   
   .post-grid {
-	display: grid;
-	grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-	gap: 40px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	/* margin-top: ; */
   }
   
   .post {
@@ -95,27 +116,41 @@ nav {
   
   .post img {
 	width: 100%;
-	height: 200px;
+	height: 345px;
 	object-fit: cover;
+	image-rendering: smooth;
+  }
+
+  .card-description{
+	width: inherit;
+	text-align: justify;
+	padding: 20px;
+	word-break: break-all;
+  }
+
+  .card-title{
+	font-size: 35px;
+	font-weight: bold;
+	padding-bottom: 25px;
   }
   
   .post h3 {
 	font-size: 1.5rem;
 	font-weight: bold;
-	margin: 20px;
+	margin: 20px ;
 	color: #333;
   }
   
   .post p {
 	font-size: 1.2rem;
 	line-height: 1.5;
-	margin: 20px;
+	margin: 20px ;
 	color: #666;
   }
   .recent-posts h2 {
 	font-size: 2.5rem;
 	font-weight: bold;
-	margin-bottom: 50px;
+	margin-bottom: 50px ;
 	color: #0a0a0a; /* orange color, can be adjusted as needed */
 	font-family: 'Poppins', sans-serif; /* or any other font that you prefer */
   }
