--- a/client/src/styles/PostList.css
+++ b/client/src/styles/PostList.css
@@ -9,12 +9,13 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: start;
     margin: 20px;
-    padding: 20px;
+    padding: 45px 20px 20px 20px;
     border: 1px solid black;
     border-radius: 10px;
-    width: 80%;
+    width: 30vw;
+    height: 65vh;
     max-width: 600px;
     text-align: center;
   }
