--- a/client/src/styles/Post.css
+++ b/client/src/styles/Post.css
@@ -170,6 +170,7 @@ nav {
   .stars {
     display:flex;
     align-items: center;
+    flex-direction: row-reverse;
   }
   
   .stars input[type="radio"] {
@@ -388,4 +389,18 @@ textarea:focus {
   }
   .tag-btn{
     @apply border bg-indigo-500 py-4 px-4 rounded-lg text-gray-50 text-xl shadow-sm text-center cursor-pointer;
+}
+
+.remove-tag {
+  @apply pt-1 cursor-pointer;
+  font-size: 22px;
+}
+
+.view-post-tag-container {
+  @apply flex gap-1;
+}
+
+.view-post-tag {
+  @apply px-2 border rounded-lg text-center text-white;
+  background-color: #ff6a6a;
 }
