--- a/client/src/styles/Homepage.css
+++ b/client/src/styles/Homepage.css
@@ -120,4 +120,37 @@ nav {
 	font-family: 'Poppins', sans-serif; /* or any other font that you prefer */
   }
   /* new changes */
+  .searchBar {
+	border: none;
+	border-radius: 4px;
+	padding: 6px 12px;
+	margin: auto 0;
+	font-size: 16px;
+	background-color: #f2f2f2;
+	width: 20%;
+	box-sizing: border-box;
+	transition: all 0.3s;
+	height: 32px;
+	display: flex;
+	align-items: center;
+	padding:20px;
+	text-align: center;
+  }
   
+  .searchBar:focus {
+	outline: none;
+	background-color: #ffffff;
+	box-shadow: 0 0 4px rgba(0, 0, 0, 0.3);
+  }
+
+  .searchBar::placeholder{
+	text-align: center;
+  }
+
+  .searchForm{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin-top: 20px;
+	margin-bottom: 100px;
+  }
