fixed posts view and posts list

--- a/client/src/styles/Post.css
+++ b/client/src/styles/Post.css
@@ -1,358 +1,365 @@
-
-
 nav {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	padding: 20px;
-	background-color: #fff;
-	box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.1);
-  }
-  
-  .logo a {
-	font-size: 2rem;
-	font-weight: bold;
-	color: #333;
-	text-decoration: none;
-  }
-  
-  .nav-links {
-	list-style: none;
-	display: flex;
-	align-items: center;
-	gap: 20px;
-  }
-  
-  .nav-links li a {
-	color: #333;
-	text-decoration: none;
-	font-size: 1.2rem;
-	font-weight: bold;
-  }
-  
-  .nav-links li a:hover {
-	color: #ff8c00;
-  }
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
+  background-color: #fff;
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.1);
+}
+
+.logo a {
+  font-size: 2rem;
+  font-weight: bold;
+  color: #333;
+  text-decoration: none;
+}
+
+.nav-links {
+  list-style: none;
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+
+.nav-links li a {
+  color: #333;
+  text-decoration: none;
+  font-size: 1.2rem;
+  font-weight: bold;
+}
+.post-body{
+  display: flex;
+  justify-content: space-between;
+  margin: 20px 0 50px 0;
+
+}
+.nav-links li a:hover {
+  color: #ff8c00;
+}
+
 .post-container {
   background-color: #fff;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   padding: 30px;
-  margin: 20px auto; /* Set margin to auto for centering and adjust top/bottom margin */
-  max-width: 90%; /* Set a max-width to limit container width */
+  margin: 20px auto;
+  /* Set margin to auto for centering and adjust top/bottom margin */
+  max-width: 80%;
+  /* Set a max-width to limit container width */
 }
 
-  
+
 .post-image {
-  width: 75%;
+  width: 50%;
+  border-radius: 5px;
+}
+
+.post-image img {
+  margin: auto;
+  /* Center the image horizontally */
+  max-width: 100%;
+  /* Make sure the image doesn't overflow its container */
+}
+
+.post-title {
+  font-size: 350%;
+  font-weight: bold;
+  text-align: center;
+
+}
+
+.post-description {
+  font-size: 18px;
+  line-height: 1.5;
+  word-break: break-word;
+  margin-right: 70px;
+  text-align: justify;
+}
+
+.other-images-container {
+  margin-bottom: 20px;
+}
+
+.other-images-container h3 {
+  font-size: 20px;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.other-images-slideshow {
+  display: flex;
+  overflow-x: auto;
+  -webkit-overflow-scrolling: touch;
+  scroll-snap-type: x mandatory;
+  margin-bottom: 20px;
+}
+
+.other-image {
+  width: 150px;
+  height: 150px;
+  object-fit: cover;
+  border-radius: 5px;
+  margin-right: 10px;
+  scroll-snap-align: center;
+}
+
+.post-interactions {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.post-reactions {
+  display: flex;
+  align-items: center;
+}
+
+
+.like-btn {
+  background-color: transparent;
+  border: none;
+  padding: 0;
+  margin: 0;
+}
+
+.like-btn img {
+  width: 50px;
+  height: 40px;
+
+  background-image: url("../assets/burger.png");
+}
+
+.likes-count {
+  font-size: 18px;
+  margin-left: 5px;
+}
+
+.comment-input {
+  width: 70%;
+  height: 30px;
+  border-radius: 5px;
+  border: none;
+  padding: 5px 10px;
+  margin-right: 10px;
+}
+
+.comment-submit-btn {
+  background-color: #FF6347;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  padding: 5px 10px;
+  cursor: pointer;
+  transition: background-color 0.2s ease-in-out;
+}
+
+.comment-submit-btn:hover {
+  background-color: #FF5733;
+}
+
+.rating {
+  display: flex;
+  align-items: center;
+}
+
+.rating p {
+  font-size: 18px;
+  margin-right: 10px;
+}
+
+.stars {
+  display: flex;
+  align-items: center;
+  flex-direction: row-reverse;
+}
+
+.stars input[type="radio"] {
+  display: none;
+}
+
+.stars label {
+  font-size: 24px;
+  color: #ccc;
+  cursor: pointer;
+  transition: color 0.2s ease-in-out;
+}
+
+.stars label:hover,
+.stars label:hover~label,
+.stars input[type="radio"]:checked~label {
+  color: #FFD700;
+}
+
+.rating-count {
+  font-size: 18px;
+  margin-left: 5px;
+}
+
+.comments-container {
+  margin-top: 20px;
+}
+
+.comments-container h3 {
+  font-size: 20px;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.comments-list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.comment {
+  font-size: 18px;
+  margin-bottom: 10px;
+  margin: 10px;
+  padding: 10px;
+  background-color: #f5f5f5;
+  border-radius: 5px;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.comment-input {
+  width: 80%;
+  margin-right: 10px;
+  padding: 10px;
+  border-radius: 5px;
+  border: none;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.comment-submit-btn {
+  margin-top: 10px;
+  background-color: #ff6f69;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  padding: 10px 20px;
+  font-size: 16px;
+  font-weight: bold;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.comment-submit-btn:hover {
+  background-color: #d7385e;
+}
+
+.create-post-form {
+  background-color: #f5f5f5;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+  margin: 20px auto;
+  max-width: 600px;
+}
+
+.create-post-form h2 {
+  text-align: center;
+  font-size: 2rem;
+  margin-bottom: 20px;
+  color: #3e3e3e;
+}
+
+.create-post-form form {
+  display: flex;
+  flex-direction: column;
+}
+
+.create-post-form .form-group {
+  margin-bottom: 10px;
+}
+
+.create-post-form label {
+  font-weight: bold;
+  margin-bottom: 5px;
+  color: #3e3e3e;
+}
+
+.create-post-form input[type='text'] {
+  padding: 10px;
+  border-radius: 5px;
+  border: none;
+  margin-bottom: 10px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+}
+
+.create-post-form button {
+  background-color: #3e3e3e;
+  color: #fff;
+  padding: 10px;
+  border: none;
+  border-radius: 5px;
+  margin-top: 10px;
+  cursor: pointer;
+}
+
+.create-post-form button:hover {
+  background-color: #1c1c1c;
+}
+
+.create-post-form p {
+  margin-top: 10px;
+  font-weight: bold;
+  color: #3e3e3e;
+}
+
+
+.create-post-container {
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  padding: 30px;
+  margin: 20px auto;
+  /* Set margin to auto for centering and adjust top/bottom margin */
+  max-width: 90%;
+  /* Set a max-width to limit container width */
+}
+
+
+.create-post-image {
+  width: 500px;
+  height: auto;
   border-radius: 5px;
   margin-bottom: 20px;
   display: flex;
   align-items: center;
   justify-content: center;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  
 }
 
-.post-image img {
-  margin: auto; /* Center the image horizontally */
-  max-width: 100%; /* Make sure the image doesn't overflow its container */
+.create-post-image img {
+  margin: auto;
+  /* Center the image horizontally */
+  max-width: 100%;
+  /* Make sure the image doesn't overflow its container */
 }
-  
-  .post-title {
-    font-size: 350%;
-    font-weight: bold;
-    text-align: center;
 
-  }
-  
-  .post-description {
-    font-size: 18px;
-    line-height: 1.5;
-    margin-bottom: 50px;
-    text-align: center;
-  }
-  
-  .other-images-container {
-    margin-bottom: 20px;
-  }
-  
-  .other-images-container h3 {
-    font-size: 20px;
-    font-weight: bold;
-    margin-bottom: 10px;
-  }
-  
-  .other-images-slideshow {
-    display: flex;
-    overflow-x: auto;
-    -webkit-overflow-scrolling: touch;
-    scroll-snap-type: x mandatory;
-    margin-bottom: 20px;
-  }
-  
-  .other-image {
-    width: 150px;
-    height: 150px;
-    object-fit: cover;
-    border-radius: 5px;
-    margin-right: 10px;
-    scroll-snap-align: center;
-  }
-  
-  .post-interactions {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 20px;
-  }
-  
-  .post-reactions {
-    display: flex;
-    align-items: center;
-  }
-  
-  
-  .like-btn {
-    background-color: transparent;
-    border: none;
-    padding: 0;
-    margin: 0;
-  }
-  
-  .like-btn img {
-    width: 50px;
-    height: 40px;
-    
-    background-image: url("../assets/burger.png");
-  }
-  
-  .likes-count {
-    font-size: 18px;
-    margin-left: 5px;
-  }
-  
-  .comment-input {
-    width: 70%;
-    height: 30px;
-    border-radius: 5px;
-    border: none;
-    padding: 5px 10px;
-    margin-right: 10px;
-  }
-  
-  .comment-submit-btn {
-    background-color: #FF6347;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    padding: 5px 10px;
-    cursor: pointer;
-    transition: background-color 0.2s ease-in-out;
-  }
-  
-  .comment-submit-btn:hover {
-    background-color: #FF5733;
-  }
-  
-  .rating {
-    display: flex;
-    align-items: center;
-  }
-  
-  .rating p {
-    font-size: 18px;
-    margin-right: 10px;
-  }
-  
-  .stars {
-    display:flex;
-    align-items: center;
-    flex-direction: row-reverse;
-  }
-  
-  .stars input[type="radio"] {
-    display: none;
-  }
-  
-  .stars label {
-    font-size: 24px;
-    color: #ccc;
-    cursor: pointer;
-    transition: color 0.2s ease-in-out;
-  }
-  
-  .stars label:hover,
-  .stars label:hover ~ label,
-  .stars input[type="radio"]:checked ~ label {
-    color: #FFD700;
-  }
-  
-  .rating-count {
-    font-size: 18px;
-    margin-left: 5px;
-  }
-  
-  .comments-container {
-    margin-top: 20px;
-  }
-  
-  .comments-container h3 {
-    font-size: 20px;
-    font-weight: bold;
-    margin-bottom: 10px;
-  }
-  
-  .comments-list {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-  }
-  
-.comment {
-    font-size: 18px;
-    margin-bottom: 10px; 
-    margin: 10px;
-    padding: 10px;
-    background-color: #f5f5f5;
-    border-radius: 5px;
-    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
-    }
-    
-    .comment-input {
-    width: 80%;
-    margin-right: 10px;
-    padding: 10px;
-    border-radius: 5px;
-    border: none;
-    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
-    }
-    
-    .comment-submit-btn {
-    margin-top: 10px;
-    background-color: #ff6f69;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    padding: 10px 20px;
-    font-size: 16px;
-    font-weight: bold;
-    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-    }
-    
-    .comment-submit-btn:hover {
-    background-color: #d7385e;
-    }
-    
-.create-post-form {
-    background-color: #f5f5f5;
-    padding: 20px;
-    border-radius: 5px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
-    margin: 20px auto;
-    max-width: 600px;
-  }
-  
-  .create-post-form h2 {
-    text-align: center;
-    font-size: 2rem;
-    margin-bottom: 20px;
-    color: #3e3e3e;
-  }
-  
-  .create-post-form form {
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .create-post-form .form-group {
-    margin-bottom: 10px;
-  }
-  
-  .create-post-form label {
-    font-weight: bold;
-    margin-bottom: 5px;
-    color: #3e3e3e;
-  }
-  
-  .create-post-form input[type='text'] {
-    padding: 10px;
-    border-radius: 5px;
-    border: none;
-    margin-bottom: 10px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
-  }
-  
-  .create-post-form button {
-    background-color: #3e3e3e;
-    color: #fff;
-    padding: 10px;
-    border: none;
-    border-radius: 5px;
-    margin-top: 10px;
-    cursor: pointer;
-  }
-  
-  .create-post-form button:hover {
-    background-color: #1c1c1c;
-  }
-  
-  .create-post-form p {
-    margin-top: 10px;
-    font-weight: bold;
-    color: #3e3e3e;
-  }
+.create-post-title {
+  font-size: 350%;
+  font-weight: bold;
+}
 
+.create-post-description {
+  font-size: 18px;
+  line-height: 1.5;
+  width: 30%;
+  margin-bottom: 20px;
+  margin-left: 20px;
+  text-align: left;
+  text-justify: auto;
+  word-wrap: break-word;
 
-  .create-post-container {
-    background-color: #fff;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    padding: 30px;
-    margin: 20px auto; /* Set margin to auto for centering and adjust top/bottom margin */
-    max-width: 90%; /* Set a max-width to limit container width */
-  }
-  
-    
-  .create-post-image {
-    width: 500px;
-    height: auto;
-    border-radius: 5px;
-    margin-bottom: 20px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  .create-post-image img {
-    margin: auto; /* Center the image horizontally */
-    max-width: 100%; /* Make sure the image doesn't overflow its container */
-  }
-    
-    .create-post-title {
-      font-size: 350%;
-      font-weight: bold;
-    }
-    
-    .create-post-description {
-      font-size: 18px;
-      line-height: 1.5;
-      width:30%;
-      margin-bottom: 20px;
-      margin-left: 20px;
-      text-align: left;
-      text-justify: auto;
-      word-wrap: break-word;
+  border: 1px solid black;
+  outline: none;
+}
 
-      border: 1px solid black;
-      outline: none;
-    }
-
-h2 {margin-left: 55px;}
+h2 {
+  margin-left: 55px;
+}
 
 textarea {
   margin-top: 10px;
@@ -371,7 +378,7 @@ textarea {
   border-width: medium 1px 1px medium;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.12) inset;
   color: #555555;
-  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 1em;
   line-height: 1.4em;
   padding: 5px 8px;
@@ -381,14 +388,16 @@ textarea {
 
 
 textarea:focus {
-    background: none repeat scroll 0 0 #FFFFFF;
-    outline-width: 0;
+  background: none repeat scroll 0 0 #FFFFFF;
+  outline-width: 0;
 }
-    .submit-post{
-      @apply border bg-indigo-500 py-4 px-4 rounded-lg text-gray-50 text-xl shadow-sm text-center cursor-pointer;
-  }
-  .tag-btn{
-    @apply border bg-indigo-500 py-4 px-4 rounded-lg text-gray-50 text-xl shadow-sm text-center cursor-pointer;
+
+.submit-post {
+  @apply border bg-indigo-500 py-4 px-4 rounded-lg text-gray-50 text-xl shadow-sm text-center cursor-pointer;
+}
+
+.tag-btn {
+  @apply border bg-indigo-500 py-4 px-4 rounded-lg text-gray-50 text-xl shadow-sm text-center cursor-pointer;
 }
 
 .remove-tag {
