--- a/client/src/styles/Homepage.css
+++ b/client/src/styles/Homepage.css
@@ -124,7 +124,7 @@ nav {
 
 .card-description {
 	width: inherit;
-	text-align: justify;
+	text-align: center;
 	padding: 20px;
 	word-break: break-all;
 }
@@ -153,41 +153,42 @@ nav {
 	font-size: 2.5rem;
 	font-weight: bold;
 	margin-bottom: 50px;
-	color: #0a0a0a; /* orange color, can be adjusted as needed */
-	font-family: 'Poppins', sans-serif; /* or any other font that you prefer */
-  }
-  
-  .searchBar {
-	border: none;
-	border-radius: 4px;
+	color: #0a0a0a;
+	/* orange color, can be adjusted as needed */
+	font-family: 'Poppins', sans-serif;
+	/* or any other font that you prefer */
+}
+
+.searchBar {
+	border: solid 0.3em;
+	border-radius: 2.5em;
 	padding: 6px 12px;
 	margin: auto 0;
-	font-size: 16px;
+	font-size: 20px;
 	background-color: #f2f2f2;
 	width: 20%;
 	box-sizing: border-box;
 	transition: all 0.3s;
 	height: 32px;
-	display: flex;
-	align-items: center;
-	padding:20px;
+	display: inline-block;
+	padding: 20px;
 	text-align: center;
-  }
-  
-  .searchBar:focus {
+}
+
+.searchBar:focus {
 	outline: none;
 	background-color: #ffffff;
 	box-shadow: 0 0 4px rgba(0, 0, 0, 0.3);
-  }
+}
 
-  .searchBar::placeholder{
+.searchBar::placeholder {
 	text-align: center;
-  }
+}
 
-  .searchForm{
+.searchForm {
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	margin-top: 20px;
 	margin-bottom: 100px;
-  }
+}
