--- a/client/src/styles/Post.css
+++ b/client/src/styles/Post.css
@@ -98,9 +98,8 @@ nav {
 .post-description {
   font-size: 18px;
   line-height: 1.5;
-  word-break: break-word;
   margin-right: 70px;
-  text-align: center;
+  white-space: pre-wrap;
 }
 
 .other-images-container {
