--- a/client/src/styles/ViewProfile.css
+++ b/client/src/styles/ViewProfile.css
@@ -11,6 +11,7 @@
 .user-profile-body{
     display: flex;
     flex-direction: column;
+    justify-content: space-evenly;
     align-items: center;
     background: rgba(255, 255, 255, 0.55);
     border: 1px solid rgba(255, 255, 255, 0.3);
