--- a/client/src/styles/ViewProfile.css
+++ b/client/src/styles/ViewProfile.css
@@ -28,7 +28,9 @@ input{
 
 }
 .profile{
-    font-weight: 700;font-size: 40px;margin-top: 20px;
+    font-weight: 700;
+    font-size: 40px;
+    margin-top: 20px;
 }
 .user-image{
     --tw-border-opacity: 1;
