--- a/client/src/styles/Homepage.css
+++ b/client/src/styles/Homepage.css
@@ -56,6 +56,7 @@ nav {
 }
 
 .homepage-header {
+	@apply flex gap-20;
 	position: fixed;
 	width: 100%;
 	z-index: 1;
@@ -75,7 +76,6 @@ nav {
 	align-items: center;
 	gap: 20px;
 	margin-right: 20px;
-
 }
 
 .nav-links li a {
@@ -83,6 +83,7 @@ nav {
 	text-decoration: none;
 	font-size: 1.2rem;
 	font-weight: bold;
+	white-space: nowrap;
 }
 
 .nav-links li a:hover {
@@ -150,6 +151,7 @@ nav {
 }
 
 .recent-posts h2 {
+	padding-top: 30px;
 	font-size: 2.5rem;
 	font-weight: bold;
 	margin-bottom: 50px;
@@ -159,20 +161,20 @@ nav {
   
   .searchBar {
 	border: none;
-	border-radius: 4px;
-	padding: 6px 12px;
+	border-radius: 10px;
 	margin: auto 0;
 	font-size: 16px;
 	background-color: #f2f2f2;
-	width: 20%;
+	/* width: 20%; */
 	box-sizing: border-box;
 	transition: all 0.3s;
+	/* width: 200%; */
 	height: 32px;
 	display: flex;
-	align-items: center;
+	align-items: left;
 	padding:20px;
-	text-align: center;
-  }
+	text-align: left;
+}
   
   .searchBar:focus {
 	outline: none;
@@ -181,7 +183,7 @@ nav {
   }
 
   .searchBar::placeholder{
-	text-align: center;
+	text-align: left;
   }
 
   .searchForm{
@@ -190,4 +192,13 @@ nav {
 	align-items: center;
 	margin-top: 20px;
 	margin-bottom: 100px;
+  }
+
+  /* .search-container {
+	justify-content: left;
+	align-items: left;
+  } */
+
+  .search-container {
+	@apply grid gap-20 w-3/4;
   }
