--- a/client/src/styles/Post.css
+++ b/client/src/styles/Post.css
@@ -219,6 +219,7 @@ nav {
   border-radius: 5px;
   border: none;
   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
+  text-align: left;
 }
 
 .comment-submit-btn {
