made goback button in viewprofile

--- a/client/src/styles/ViewProfile.css
+++ b/client/src/styles/ViewProfile.css
@@ -4,7 +4,7 @@
     align-items: center;
     justify-content: center;
     height: 80vh;
-    
+    @apply pt-5
     
 }
 
@@ -44,6 +44,19 @@ input{
     --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
     --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
     box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.goBack-button{
+    --tw-text-opacity: 1;
+    color: rgb(239 68 68 / var(--tw-text-opacity));
+    font-size: 4.5rem;
+    line-height: 1;
+    top: 0;
+    left: 0;
+    padding-left: 120px;
+    padding-top: 35px;
+    display: block;
+    position: fixed;
 }
 
 table {
