--- a/client/src/styles/Username.module.css
+++ b/client/src/styles/Username.module.css
@@ -18,11 +18,16 @@
 }
 
 .btn{
-    @apply bg-indigo-500 w-3/4 py-4 rounded-lg text-gray-50 text-xl shadow-sm text-center;
+    background-color: #f16b27;
+    border: 2px solid #f16b27;
+    transition: background-color 0.2s ease;
+    @apply w-3/4 py-4 rounded-lg text-gray-50 text-xl shadow-sm text-center;
 }
 
 .btn:hover{
-    background-color: #ff6a6a;
+    @apply bg-white;
+    color: #f16b27;
+    border: 2px solid #f16b27;
 }
 
 input[type='file']{
