--- a/client/src/styles/Username.module.css
+++ b/client/src/styles/Username.module.css
@@ -18,13 +18,30 @@
 }
 
 .btn{
+    border-top: 5px solid #f16b27;
     background-color: #f16b27;
     border: 2px solid #f16b27;
     transition: background-color 0.2s ease;
+    
     @apply w-3/4 py-4 rounded-lg text-gray-50 text-xl shadow-sm text-center;
 }
 
 .btn:hover{
+    @apply bg-white;
+    color: #f16b27;
+    border: 2px solid #f16b27;
+}
+
+.btn2{
+    border-top: 5px solid #f16b27;
+    background-color: #f16b27;
+    border: 2px solid #f16b27;
+    transition: background-color 0.2s ease;
+    width: 100%; 
+    @apply py-4 rounded-lg text-gray-50 text-xl shadow-sm text-center;
+}
+
+.btn2:hover{
     @apply bg-white;
     color: #f16b27;
     border: 2px solid #f16b27;
