--- a/client/src/styles/ViewProfile.css
+++ b/client/src/styles/ViewProfile.css
@@ -3,8 +3,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 80vh;
-    @apply pt-5
+    height: fit-content;
+    @apply pt-20;
     
 }
 
@@ -31,6 +31,7 @@ input{
     font-weight: 700;
     font-size: 40px;
     margin-top: 20px;
+    padding-bottom: 10px;
 }
 .user-image{
     --tw-border-opacity: 1;
@@ -70,3 +71,25 @@ table {
     padding: 5px;
   }
   
+  .viewprofilebookmark {
+    color: white;
+    @apply flex gap-1 py-1 px-2 text-center rounded-xl shadow-sm text-center cursor-pointer;
+    text-align: center;
+    justify-content: center;
+    transition: background-color 0.2s ease;
+    background-color: #f16b27;
+    border: 2px solid #f16b27;
+    width: 100%;
+
+  }
+  
+  .viewprofilebookmark:hover {
+    color: #f16b27;
+    background-color: white;
+    border: 2px solid #f16b27;
+  }
+
+  .viewprofiletextbox{
+    @apply border-0  py-4 rounded-xl shadow-sm text-lg;
+    @apply focus:outline-none;
+}
